--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                         </div>
                                 </div>
                                <hr></hr>
-                               <h3>Languages</h3>
+                               <h3>Language</h3>
                                <div class="row">
                                    <div class="col-md-4" id = "starsList">
                                        <ul class="no-bullets">
@@ -209,18 +209,6 @@
                                                    <span class="glyphicon glyphicon-star filled"></span>
                                                    <span class="glyphicon glyphicon-star filled"></span>
                                                    <span class="glyphicon glyphicon-star three-qua"></span>
-                                               </span>
-                                           </li>
-                                           <li>
-                                               <span class="ability-title">Mandarin</span>
-                                               <span class="ability-score">
-                                                   <span class="glyphicon glyphicon-star filled"></span>
-                                                   <span class="glyphicon glyphicon-star filled"></span>
-                                                   <span class="glyphicon glyphicon-star filled"></span>
-                                                   <span class="glyphicon glyphicon-star half"></span>
-                                                   <span class="glyphicon glyphicon-star unfilled"></span>
-
-
                                                </span>
                                            </li>
 
