--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
                                                    <span class="glyphicon glyphicon-star three-qua"></span>
                                                </span>
                                            </li>
+                                         
+                                         <li>
+                                               <span class="ability-title">Fujian Dialect</span>
+                                               <span class="ability-score">
+                                                   <span class="glyphicon glyphicon-star filled"></span>
+                                                   <span class="glyphicon glyphicon-star filled"></span>
+                                                   <span class="glyphicon glyphicon-star three-qua"></span>
+                                               </span>
+                                           </li
 
                                         </ul>
                                    </div>
