--- a/index.html
+++ b/index.html
@@ -210,14 +210,16 @@
                                                    <span class="glyphicon glyphicon-star filled"></span>
                                                    <span class="glyphicon glyphicon-star three-qua"></span>
                                                </span>
-                                           </li>
-                                         
+                                         </li>
                                          <li>
                                                <span class="ability-title">Fujian Dialect</span>
                                                <span class="ability-score">
                                                    <span class="glyphicon glyphicon-star filled"></span>
                                                    <span class="glyphicon glyphicon-star filled"></span>
-                                                   <span class="glyphicon glyphicon-star three-qua"></span>
+                                                   <span class="glyphicon glyphicon-star filled"></span>
+                                                   <span class="glyphicon glyphicon-star unfilled"></span>
+                                                   <span class="glyphicon glyphicon-star unfilled"></span>
+                                                 
                                                </span>
                                            </li
 
